# MastersThesis

./: .gitignore  AGENT.md  README.md  expose.txt  justfile  main.py  pyproject.toml
.github/workflows/: ty-check.yml
prototype/: README.md  extract_prosody.py  pyproject.toml
scripts/: analyze_posthoc.sh  smoke_test_earnings21.py  smoke_test_prompted_1_kisski.py  smoke_test_prompted_2_whisper_baseline.py  smoke_test_prompted_3_whisper_prompted.py
src/acoustic_feature_extraction/: README.md
src/acoustic_feature_extraction/data/: audio_utils.py  (+3 more)
src/asr_adaptation/: README.md
src/asr_model_speaker_adaptation/: README.md
src/controllers/: l2arctic_minimal_controller.py  saa_minimal_controller.py
src/data/: audio_utils.py  l2arctic_utils.py  saa_segmentation.py  saa_utils.py
src/features/: utterance_embedding.py
src/lexical_stylistic_prompting/: README.md
src/metrics/: similarity.py
src/models/: l2arctic_minimal.py  prosody.py  saa_minimal.py  speaker_stability.py  wavlm_encoder.py
src/pipeline/: l2arctic_minimal.py  prosody_pipeline.py  saa_minimal.py  speaker_stability.py
src/plots/: plot_speaker_stability.py
src/prosodic_feature_extraction/: README.md
tests/: conftest.py  test_analyze_perturbation_sensitivity.py  test_baseline_eval.py  test_data_size_analysis.py  test_extract_perturbation_embeddings.py  test_generate_perturbations.py  test_incremental_embeddings.py  test_l2arctic_transcriptions.py  test_lora_train.py  test_plot_perturbation_sensitivity.py  test_saa_segmentation.py  test_wav2vec_lora.py  test_wavlm_lora.py  test_wer.py
(+112 files in other folders)
