[project]
name = "mastersthesis"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "librosa>=0.11.0",
    "loguru>=0.7.3",
    "numpy>=2.4.2",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
]
